<resources>
    <string name="app_name">Traveler</string>
    <string name="action_settings">Settings</string>
    <string name="ride_from">Ride From</string>
    <string name="ride_info">Ride Info</string>
    <string name="type_your_start_location">Type your start location</string>
    <string name="ride_to">Ride To</string>
    <string name="search_ride">Search Ride</string>
    <string name="type_your_destination_location">Type your destination location</string>
    <string name="from">From</string>
    <string name="to">TextView</string>
    <string name="start_position">Start position</string>
    <string name="destination_position">Destination position</string>
    <string name="todo">TODO</string>
    <string name="pin_on_the_map">Pin on the map</string>
    <string name="number_of_passangers">Number of passangers</string>
    <string name="main_menu">Menu</string>
    <string name="you_have_no_rides">You have no rides</string>
</resources>
