<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SearchRide">


    <TextView
            android:text="@string/ride_from"
            style="@style/text_view"
            android:layout_width="94dp"
            android:layout_height="32dp"
            android:id="@+id/tv_search_ride_from" android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"/>
    <EditText
            android:layout_width="299dp"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textPersonName"
            android:ems="10"
            android:id="@+id/et_search_ride_from" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_ride_from" android:layout_marginStart="36dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/type_your_start_location"
            android:autofillHints=""/>
    <TextView
            android:text="@string/ride_to"
            style="@style/text_view"
            android:layout_width="105dp"
            android:layout_height="28dp"
            android:id="@+id/tv_search_ride_to" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/et_search_ride_from" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp"/>
    <EditText
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textPersonName"
            android:ems="10"
            android:id="@+id/editText2" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_search_ride_to" android:hint="Type your destination location"
            android:layout_marginStart="36dp" app:layout_constraintStart_toStartOf="parent"/>
</android.support.constraint.ConstraintLayout>