<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateRide">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textAutoCorrect|textPersonName"
            android:ems="10"
            android:id="@+id/create_ride_from_et"
            android:hint="@string/start_position"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/create_ride_from_tv" android:layout_marginStart="12dp"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints=""/>
    <TextView
            android:text="@string/from"
            style="@style/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_ride_from_tv" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/to"
            style="@style/text_view"
            android:layout_width="132dp"
            android:layout_height="26dp"
            android:id="@+id/create_ride_to_tv" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/create_ride_from_et" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" tools:text="Destination"/>
    <EditText
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/create_ride_to_tv" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="Destination position" android:autofillHints=""/>
</android.support.constraint.ConstraintLayout>